test/fixtures/type-error/badReturnType.lys
fun test(): f32 = false